Remove redirect URL
